--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/navbarmobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/navbarmobile.html
@@ -21,14 +21,14 @@ $(document).ready(function() {
   $("#nav-icon").click(function() { //Nav-icon anklicken -> Logo ausblenden
     if (counterMenu % 2 != 0) {
       $("#grauerBalken").css("height", "4rem");
-      $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/hamburger.svg");
+      $("#hamburgerMobile").attr("src", " https://www.chance-international.org/bilder/header-bilder/hamburger.svg");
       $("#logoMobile").show();
       $("#menuSchrift").show();
     } else {
       $("#grauerBalken").css("height", "100%");
       $("#logoMobile").hide();
       $("#menuSchrift").hide();
-      $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/schließen.png");
+      $("#hamburgerMobile").attr("src", " https://www.chance-international.org/bilder/header-bilder/schließen.png");
     }
     counterMenu++;
   });
@@ -41,7 +41,7 @@ $(document).ready(function() {
       $("#dritteBox").show();
       $("#vierteBox").show();
       $("#blogBox").show();         $("#kontaktBox").show();
-      $("#pfeil1").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png "); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil1").attr("src", "  https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-right.png "); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "right");   $(".arrow").css("margin-bottom", "0");
       $("#linkUeberUns").show();
       $("#ueberUnsSchrift").hide();
@@ -52,7 +52,7 @@ $(document).ready(function() {
       $("#dritteBox").hide();
       $("#vierteBox").hide();
       $("#blogBox").hide();         $("#kontaktBox").hide();
-      $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil1").attr("src", " https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "3rem");
       $("#linkUeberUns").hide();
       $("#ueberUnsSchrift").show();
@@ -67,7 +67,7 @@ $(document).ready(function() {
       $("#dritteBox").show();
       $("#vierteBox").show();
       $("#blogBox").show();         $("#kontaktBox").show();
-      $("#pfeil2").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil2").attr("src", "  https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "right");   $(".arrow").css("margin-bottom", "0");
       $("#linkProjekte").show();
       $("#projekteSchrift").hide();
@@ -77,7 +77,7 @@ $(document).ready(function() {
       $("#dritteBox").hide();
       $("#vierteBox").hide();
       $("#blogBox").hide();         $("#kontaktBox").hide();
-      $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil2").attr("src", " https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "3rem");
       $("#linkProjekte").hide();
       $("#projekteSchrift").show();
@@ -107,7 +107,7 @@ $(document).ready(function() {
       $("#zweiteBox").show();
       $("#vierteBox").show();
       $("#blogBox").show();         $("#kontaktBox").show();
-      $("#pfeil3").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil3").attr("src", "  https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "right");  $(".arrow").css("margin-bottom", "0");
       $("#linkSpenden").show();
       $("#spendenSchrift").hide();
@@ -118,7 +118,7 @@ $(document).ready(function() {
       $("#zweiteBox").hide();
       $("#vierteBox").hide();
       $("#blogBox").hide();         $("#kontaktBox").hide();
-      $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil3").attr("src", " https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "3rem");
       $("#linkSpenden").hide();
       $("#spendenSchrift").show();
@@ -134,7 +134,7 @@ $(document).ready(function() {
       $("#zweiteBox").show();
       $("#dritteBox").show();
       $("#blogBox").show();         $("#kontaktBox").show();
-      $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil4").attr("src", "https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "right");  $(".arrow").css("margin-bottom", "0");
       $("#linkFuerSie").show();
       $("#fuerSieSchrift").hide();
@@ -145,7 +145,7 @@ $(document).ready(function() {
       $("#zweiteBox").hide();
       $("#dritteBox").hide();
       $("#blogBox").hide();         $("#kontaktBox").hide();
-      $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
+      $("#pfeil4").attr("src", "https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
       $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "3rem");
       $("#linkFuerSie").hide();
       $("#fuerSieSchrift").show();
