--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekontaktundhome.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekontaktundhome.html
@@ -47,7 +47,7 @@
         </div>
       </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
       <hr style="border-width: 1px; margin-top: 1rem; margin-bottom: 1rem; border-color: white;">
-      <a style="margin-top: 1rem; margin-bottom: 3rem;" id="spendenlink" href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary"> Jetzt Spenden </a>
+      <a style="margin-top: 1rem; margin-bottom: 3rem;" id="spendenlink" href="https://www.chance-international.org/spenden/jetztspenden.html" class="btn btn-primary"> Jetzt Spenden </a>
     </div>
     </div> <!-- Umgebende Row -->
   </div><!-- Umgebender Container -->
