--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendeprojekt.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendeprojekt.html
@@ -8,8 +8,8 @@
     <div class="col-md-8">
       <h3 style="color: white;"> {{ entry.title }} </h3>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-right: 2rem; margin-bottom: 2rem;">Kinderpate plus in Peru werden</a>
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Kenia werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-right: 2rem; margin-bottom: 2rem;">Kinderpate plus in Peru werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Kenia werden</a>
       </div>
     </div>
   </div>
