--- a/craft_sicherungWebsite/templates/fuerSie/daheim/consumermission.html
+++ b/craft_sicherungWebsite/templates/fuerSie/daheim/consumermission.html
@@ -24,8 +24,8 @@ hr {
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/daheim.html">Für Sie daheim</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie">Für Sie</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie/daheim.html">Für Sie daheim</a></li>
       <li class="breadcrumb-item">  Consumer Missions </li>
     </ol>
   </nav>
