--- a/craft_sicherungWebsite/templates/fuerSie/index.html
+++ b/craft_sicherungWebsite/templates/fuerSie/index.html
@@ -49,7 +49,7 @@
         {% set counter = counter + 1 %}
         <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-left: 5px; padding-right: 5px;">
         <div class="card border-light h-100">
-          <a href="{{'https://aufbau-website.de/craft/web/fuerSie/' ~ entry.slug}}">
+          <a href="{{'https://www.chance-international.org/fuerSie/' ~ entry.slug}}">
           <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
         </a>
           <div class="card-body">
@@ -141,7 +141,7 @@
       <div class="col-md-7" style="padding-left: 30px;">
         <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+        <a href="https://www.chance-international.org/spenden/jetztspenden.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
