--- a/craft_sicherungWebsite/templates/fuerSie/presse.html
+++ b/craft_sicherungWebsite/templates/fuerSie/presse.html
@@ -12,7 +12,7 @@
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie">Für Sie</a></li>
     <li class="breadcrumb-item"> Presse und Downloads </li>
   </ol>
 </nav>
