--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -59,7 +59,7 @@
     </div>
   </div>
 
-  <a style="margin-top: 2rem;" href="https://aufbau-website.de/craft/web/ueberUns" class="btn btn-primary" role="button">Erfahren Sie mehr über uns</a>
+  <a style="margin-top: 2rem;" href="https://www.chance-international.org/ueberUns" class="btn btn-primary" role="button">Erfahren Sie mehr über uns</a>
 
 </div>
 
@@ -136,7 +136,7 @@
 
     <h2 style="padding-top: 4rem; padding-bottom: 1rem;"> {{ entry.anleser }} </h2>
     <div id="anleser"> {{ entry.text }}</div>
-    <a style="margin-bottom: 3rem;" href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Erfahren sie mehr über unsere Projekte</a>
+    <a style="margin-bottom: 3rem;" href="https://www.chance-international.org/projekte" class="btn btn-primary" role="button">Erfahren sie mehr über unsere Projekte</a>
   </div>
 </div> <!-- Erfahren Sie mehr über unsere Projekte - Button -->
 
