--- a/craft_sicherungWebsite/templates/kontakt/dankespende.html
+++ b/craft_sicherungWebsite/templates/kontakt/dankespende.html
@@ -47,7 +47,7 @@
           </form>
 
           <p style="padding-top: 2rem; margin-bottom: 0;" id="copy"> Zweimal im Jahr versenden wir zusätzlich einen detaillierten Freundesbrief mit der Post.
-            <br> <a href="https://aufbau-website.de/craft/web/kontakt">Melden Sie sich hier für unseren ausführlichen Freundesbrief an. > </a>
+            <br> <a href="https://www.chance-international.org/kontakt">Melden Sie sich hier für unseren ausführlichen Freundesbrief an. > </a>
           </div>
         </div>
 
