--- a/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
@@ -10,8 +10,8 @@
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie">Für Sie</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
       <li class="breadcrumb-item"> {{ entry.title }} </li>
     </ol>
   </nav>
@@ -47,7 +47,7 @@
             <div class="row">
               <div class="col-4">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
-                 <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}">
+                 <a href="{{ 'https://www.chance-international.org/freiwilligenberichte/' ~ entry.slug }}">
                   <img class="rounded-circle w-75" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
                   </a>
                 </div>
@@ -56,7 +56,7 @@
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
                       <div id="copy">
-                        <a href="{{ 'https://aufbau-website.de/craft/web/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren > </a>
+                        <a href="{{ 'https://www.chance-international.org/freiwilligenberichte/' ~ entry.slug }}"> Mehr erfahren > </a>
                       </div>
                     </p>
                   </div>
