--- a/craft_sicherungWebsite/templates/projekte/index.html
+++ b/craft_sicherungWebsite/templates/projekte/index.html
@@ -50,7 +50,7 @@
           <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-right: 5px; padding-left: 5px;">
 
           <div class="card border-light h-100">
-            <a href="{{'https://aufbau-website.de/craft/web/projekte/' ~ entry.slug}}">
+            <a href="{{'https://www.chance-international.org/projekte/' ~ entry.slug}}">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
             </a>
             <div class="card-body">
@@ -93,7 +93,7 @@
       <div class="col-sm-9" style="padding-left: 30px;">
         <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+        <a href="https://www.chance-international.org/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
       </div>
     </div>
   </div>
