--- a/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -9,14 +9,14 @@
 {% block block1 %}
 
 
-<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#kind">Kinderpate werden</a>
+<a class="btn btn-primary wandernderButton" href="https://www.chance-international.org/spenden/patewerden.html#kind">Kinderpate werden</a>
 
 <div class="container-fluid text-center" style="padding-top: 9rem; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte/programme.html">Programme</a></li>
     <li class="breadcrumb-item"> Kinderpate </li>
   </ol>
 </nav>
@@ -101,10 +101,10 @@
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
       <div class="row">
         <div class="col-sm-4">
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Peru werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Peru werden</a>
         </div> <div class="col-sm-2">  </div>
         <div class="col-sm-6">
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Kenia werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate in Kenia werden</a>
         </div>
       </div>
     </div>
