--- a/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
+++ b/craft_sicherungWebsite/templates/projekte/wowirarbeiten.html
@@ -15,13 +15,13 @@
   </ul>
 </nav>
 
-<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#land">Länderpate werden</a>
+<a class="btn btn-primary wandernderButton" href="https://www.chance-international.org/spenden/patewerden.html#land">Länderpate werden</a>
 
 <div class="container-fluid text-center" style="padding-top: 9rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
     <li class="breadcrumb-item"> Wo wir arbeiten </li>
   </ol>
 </nav>
@@ -168,7 +168,7 @@
       <div class="col-md-7" style="padding-left: 30px;">
         <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
         <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button">Jetzt Länderpate werden</a>
+        <a href="https://www.chance-international.org/spenden/patewerden.html" class="btn btn-primary" role="button">Jetzt Länderpate werden</a>
       </div>
     </div>
   </div> <!-- Der orange Berg mit dem Spendenaufruf -->
