--- a/craft_sicherungWebsite/templates/spenden/einkaufenundspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/einkaufenundspenden.html
@@ -18,7 +18,7 @@ h2 {
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/spenden">Spenden</a></li>
       <li class="breadcrumb-item"> Einkaufen und Spenden </li>
     </ol>
   </nav>
