--- a/craft_sicherungWebsite/templates/spenden/jetztspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/jetztspenden.html
@@ -38,7 +38,7 @@
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/spenden">Spenden</a></li>
       <li class="breadcrumb-item"> Jetzt Spenden </li>
     </ol>
   </nav>
@@ -88,7 +88,7 @@
       <div class="col-3"> </div>
     </div>
     <div class="text-center">
-      <a id="spendenlink" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary"> Weiter </a>
+      <a id="spendenlink" href="https://www.chance-international.org/spenden/spende.html" class="btn btn-primary"> Weiter </a>
     </div>
     <div class="text-center" id="copy" style="padding-top: 3rem;">
       <span>Vielen Dank, dass sie uns Ihr Vertrauen und Ihre Hilfe schenken - gemeinsam können wir vielen Menschen ein Leben in Würde ermöglichen. <br>
@@ -101,7 +101,7 @@
 </div> <!-- Container-fluid mit den verschiedenen Spenden-zwecken -->
 
 <script>
-var linkButton = 'https://aufbau-website.de/craft/web/spenden/spende.html'
+var linkButton = 'https://www.chance-international.org/spenden/spende.html'
 $(function() { //Link am Anfang schon fertig machen
   neuerLink = linkButton + '?spendenart=' + $('#sel1').val();
   $('#spendenlink').attr('href', neuerLink);
