--- a/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -12,7 +12,7 @@
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/ueberUns">Über Uns</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/ueberUns">Über Uns</a></li>
     <li class="breadcrumb-item"> Konzept</li>
   </ol>
 </nav>
