--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekindrundeinbutton.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendekindrundeinbutton.html
@@ -9,7 +9,7 @@
       <h3 style="color: white;"> {{ entry.title }} </h3>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
         <div>
-          <a href="https://aufbau-website.de/craft/web/spenden/" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate werden</a>
+          <a href="https://www.chance-international.org/spenden/" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate werden</a>
         </div>
   </div>
 </div>
