--- a/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendenaufrufkindrund.html
+++ b/craft_sicherungWebsite/templates/_layouts/codeschnipsel/spendenaufrufkindrund.html
@@ -10,10 +10,10 @@
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
       <div class="row">
         <div class="col-sm-4">
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Peru werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Peru*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Peru werden</a>
         </div> <div class="col-sm-2">  </div>
         <div class="col-sm-6">
-          <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Kenia werden</a>
+          <a href="https://www.chance-international.org/spenden/spende.html?spendenart=Kinderpate%20Kenia*" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Kenia werden</a>
         </div>
       </div>
     </div>
