--- a/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -9,7 +9,7 @@
 <div class="nav" style="position: fixed; top: 0; overflow: hidden; z-index: 5; background-color: transparent;">
   {% set entry = craft.entries.section('spendenfelderUndSo').slug('navbar').one() %}
 
-    <a href="https://aufbau-website.de/craft/web/" style="padding-right: 0;">
+    <a href="https://www.chance-international.org/" style="padding-right: 0;">
     <img style="display: inline; margin-left: 2.5rem; width: 90px; height: 79.6px;" src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logoMobile" alt="Logo">
   </a>
 
@@ -22,54 +22,54 @@
   <div class="multi-level" style="width: 100vw; height: 100vh; padding-right: 2rem;">
 
     <div class="item" id="homeBox">
-      <a href="https://aufbau-website.de/craft/web/" id="naviUeberschrift" style="padding-right: 20%; padding-top: 10%;">HOME</a>
+      <a href="https://www.chance-international.org/" id="naviUeberschrift" style="padding-right: 20%; padding-top: 10%;">HOME</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
     <div class="item" id="ersteBox" >
-      <a href="https://aufbau-website.de/craft/web/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >ÜBER UNS</a>
+      <a href="https://www.chance-international.org/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >ÜBER UNS</a>
       <input type="checkbox" id="A"/>
       <label for="A">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="ueberUnsSchrift" class="nichtklickbareUeberschriften"> ÜBER UNS</li> <hr>
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/konzept.html"> Konzept</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/leitbild.html"> Leitbild</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/leitbild.html"> Leitbild</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/motivation.html"> Motivation</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/motivation.html"> Motivation</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/verein.html"> Der Verein</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/verein.html"> Der Verein</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/transparenz.html"> Transparenz</a> </li> <hr>
+        <li > <a href="https://www.chance-international.org/ueberUns/transparenz.html"> Transparenz</a> </li> <hr>
 
-        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html"> Empfehlungen</a> </li>
+        <li > <a href="https://www.chance-international.org/ueberUns/empfehlungen.html"> Empfehlungen</a> </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
     <div class="item" id="zweiteBox" >
-      <a href="https://aufbau-Website.de/craft/web/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">PROJEKTE</a>
+      <a href="https://www.chance-international.org/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">PROJEKTE</a>
       <input type="checkbox" id="B"/>
       <label for="B">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right;">  </label>
 
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul> <!-- Dropdown beginnt -->
         <li id="projekteSchrift" class="nichtklickbareUeberschriften"> PROJEKTE</li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li> <hr>
 
         <li>
           <div class="sub-item" id="subItemProjekte"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
-            <a href="https://aufbau-Website.de/craft/web/projekte/programme.html" style="display: inline; padding-right: 20%;">Programme</a>
+            <a href="https://www.chance-international.org/projekte/programme.html" style="display: inline; padding-right: 20%;">Programme</a>
             <input type="checkbox" id="B-A"/>
             <label for="B-A">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
         </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>  </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>  </li>
+        <li> <a href="https://www.chance-international.org/projekte/themen.html"> Themen</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>  </li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/projektberichte.html">Projektberichte</a>  </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -80,56 +80,56 @@
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li id="projekteProgramme"> Programme</li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/programme/kinderpate.html">Kinderpaten</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li> <hr>
       </ul>
     </div>
 
     <div class="item" id="dritteBox" >
-      <a href="https://aufbau-Website.de/craft/web/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">SPENDEN</a>
+      <a href="https://www.chance-international.org/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">SPENDEN</a>
       <input type="checkbox" id="C"/>
       <label for="C">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
         <li id="spendenSchrift" class="nichtklickbareUeberschriften"> SPENDEN</li> <hr>
-        <li>  <a href="https://aufbau-Website.de/craft/web/spenden">Übersicht Spenden</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/jetztspenden.html">Jetzt Spenden</a></li> <hr>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html">Pate werden</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/schenkenundspenden.html">Schenken und Spenden</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a></li>
+        <li>  <a href="https://www.chance-international.org/spenden">Übersicht Spenden</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/spenden/jetztspenden.html">Jetzt Spenden</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/spenden/patewerden.html">Pate werden</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/spenden/schenkenundspenden.html">Schenken und Spenden</a></li> <hr>
+        <li> <a href="https://www.chance-international.org/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a></li>
       </ul>
         <hr> <!-- Horizontal Ruler für Abstände -->
     </div> <!-- Dritte Box (Spenden) - Ende -->
 
     <div class="item" id="vierteBox" >
-      <a href="https://aufbau-website.de/craft/web/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">FÜR SIE</a>
+      <a href="https://www.chance-international.org/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">FÜR SIE</a>
       <input type="checkbox" id="D"/>
       <label for="D">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
         <li id="fuerSieSchrift" class="nichtklickbareUeberschriften"> FÜR SIE</li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li> <hr>
         <li>
           <div class="sub-item" id="subItemFreiwilligendienst"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
-            <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html" style="display: inline; padding-right: 20%;">Freiwilligendienst</a>
+            <a href="https://www.chance-international.org/fuerSie/freiwilligendienst.html" style="display: inline; padding-right: 20%;">Freiwilligendienst</a>
             <input type="checkbox" id="D-A"/>
             <label for="D-A">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/fuerSie/projektbesuch.html">Projektbesuch</a> </li> <hr>
         <li>
           <div class="sub-item" id="subItemDaheim"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
-            <a href="https://aufbau-website.de/craft/web/fuerSie/daheim.html" style="display: inline; padding-right: 20%;">Für Sie daheim</a>
+            <a href="https://www.chance-international.org/fuerSie/daheim.html" style="display: inline; padding-right: 20%;">Für Sie daheim</a>
             <input type="checkbox" id="D-B"/>
             <label for="D-B">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
         </li> <hr>
-        <li> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
+        <li> <a href="https://www.chance-international.org/fuerSie/presse">Presse und Downloads</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/fuerSie/literaturtipps.html">Literaturtipps</a> </li> <hr>
+        <li> <a href="https://www.chance-international.org/fuerSie/zitate.html">Zitate</a> </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -137,14 +137,14 @@
 
     <div id="fuerSieFreiwilligendienst" style="display: none;">
       <input type="checkbox" id="D-A1"/>
-      <label for="D-A1">   <img src="https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png" class="pfeilUnterebene">  </label>
+      <label for="D-A1">   <img src="https://www.chance-international.org/bilder/header-bilder/arrow-boxes-35px-left.png" class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Freiwilligendienst </li> <hr>
-        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung-1.html">Deine Bewerbung</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li> <hr>
+        <li><a tabindex="-1" href="https://www.chance-international.org/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li> <hr>
+        <li><a href="https://www.chance-international.org/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li> <hr>
+        <li><a href="https://www.chance-international.org/fuerSie/freiwillig/bewerbung-1.html">Deine Bewerbung</a></li> <hr>
+        <li><a href="https://www.chance-international.org/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li> <hr>
       </ul>
     </div>
 
@@ -154,19 +154,19 @@
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
         <li> Für Sie daheim </li> <hr>
-        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li> <hr>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li> <hr>
+        <li><a tabindex="-1" href="https://www.chance-international.org/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li> <hr>
+        <li><a href="https://www.chance-international.org/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li> <hr>
+        <li><a href="https://www.chance-international.org/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li> <hr>
       </ul>
     </div>
 
     <div style="padding-top: 5px; padding: 0 2rem;" id="blogBox">
-      <a href="https://aufbau-website.de/craft/web/blog">BLOG</a>
+      <a href="https://www.chance-international.org/blog">BLOG</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
     <div style="padding-top: 20px; padding: 0 2rem;" id="kontaktBox">
-      <a href="https://aufbau-website.de/craft/web/kontakt">KONTAKT</a>
+      <a href="https://www.chance-international.org/kontakt">KONTAKT</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
