--- a/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -23,7 +23,7 @@
     <div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 0;">
 
       <!-- Chance Logo -->
-      <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
+      <a class="navbar-brand"  href="https://www.chance-international.org/">
         <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logo" alt="Logo" style="width: 160px; height: 141.5px;">
       </a>
 
@@ -38,30 +38,30 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar" style="justify-content: center;">  <!-- Sehr wichtiger justify-content: center-->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://aufbau-Website.de/craft/web/" id="home"> HOME </a>
+            <a class="nav-link" href="https://www.chance-international.org/" id="home"> HOME </a>
           </li>
 
           <div class="dropdown">
             <li class="nav-item dropdown" >
               <a class="nav-link" data-toggle="dropdown"
-              href="https://aufbau-Website.de/craft/web/ueberUns" id="ueberUns"> ÜBER UNS </a>
+              href="https://www.chance-international.org/ueberUns" id="ueberUns"> ÜBER UNS </a>
               <div class="pfeil">  </div>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns"> Übersicht Über uns</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns"> Übersicht Über uns</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/konzept.html"> Konzept</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/leitbild.html"> Leitbild</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/leitbild.html"> Leitbild</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/motivation.html"> Motivation</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/motivation.html"> Motivation</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/verein.html"> Der Verein</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/verein.html"> Der Verein</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/transparenz.html"> Transparenz</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/ueberUns/transparenz.html"> Transparenz</a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item">  <a tabindex="-1" href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html">Empfehlungen</a>  </li>
+                <li class="dropdown-item">  <a tabindex="-1" href="https://www.chance-international.org/ueberUns/empfehlungen.html">Empfehlungen</a>  </li>
               </li>
             </ul>
           </div>
@@ -69,34 +69,34 @@
           <div class="dropdown">
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" id="projekte"> PROJEKTE </a>
+              aria-expanded="false" href="https://www.chance-international.org/projekte" id="projekte"> PROJEKTE </a>
 
               <div class="pfeil">  </div>
 
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte"> Übersicht Projekte </a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/projekte"> Übersicht Projekte </a> </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-submenu">
-                  <a  class="dropdown-item obermenu" tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme.html">Programme</a>
+                  <a  class="dropdown-item obermenu" tabindex="-1" href="https://www.chance-international.org/projekte/programme.html">Programme</a>
                   <ul class="dropdown-menu ausklappbar">
-                    <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
+                    <li class="dropdown-item"><a tabindex="-1" href="https://www.chance-international.org/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
                     <li class="dropdown-divider"></li>
-                    <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li>
+                    <li class="dropdown-item"><a href="https://www.chance-international.org/projekte/programme/kinderpate.html">Kinderpaten</a></li>
                     <li class="dropdown-divider"></li>
-                    <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li>
+                    <li class="dropdown-item"><a href="https://www.chance-international.org/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-divider"></li>
-                <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
+                <li class="dropdown-item"> <a href="https://www.chance-international.org/projekte/themen.html"> Themen</a> </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a  href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
+                  <a  href="https://www.chance-international.org/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
                 </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a  href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
+                  <a  href="https://www.chance-international.org/projekte/projektberichte.html">Projektberichte</a>
                 </li>
               </li>
             </ul>
@@ -105,27 +105,27 @@
           <div class="dropdown">
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="spenden"> SPENDEN </a>
+              aria-expanded="false" href="https://www.chance-international.org/spenden" id="spenden"> SPENDEN </a>
               <div class="pfeil">  </div>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item">
-                  <a href="https://aufbau-Website.de/craft/web/spenden">Übersicht Spenden</a>
+                  <a href="https://www.chance-international.org/spenden">Übersicht Spenden</a>
                 </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a href="https://aufbau-Website.de/craft/web/spenden/jetztspenden.html">Jetzt Spenden</a>
+                  <a href="https://www.chance-international.org/spenden/jetztspenden.html">Jetzt Spenden</a>
                 </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html">Pate werden</a>
+                  <a href="https://www.chance-international.org/spenden/patewerden.html">Pate werden</a>
                 </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a  href="https://aufbau-Website.de/craft/web/spenden/schenkenundspenden.html">Schenken und Spenden</a>
+                  <a  href="https://www.chance-international.org/spenden/schenkenundspenden.html">Schenken und Spenden</a>
                 </li>
                 <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
-                  <a href="https://aufbau-Website.de/craft/web/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a>
+                  <a href="https://www.chance-international.org/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a>
                 </li>
               </li>
             </div>
@@ -133,53 +133,53 @@
             <div class="dropdown">
               <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" id="fuerSie"> FÜR SIE </a>
+                aria-expanded="false" href="https://www.chance-international.org/fuerSie" id="fuerSie"> FÜR SIE </a>
                 <div class="pfeil">  </div>
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
-                  <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie"> Übersicht Für Sie </a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie"> Übersicht Für Sie </a> </li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-submenu">
-                    <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a>
+                    <a  class="dropdown-item" tabindex="-1" href="https://www.chance-international.org/fuerSie/freiwilligendienst.html">Freiwilligendienst</a>
                     <ul class="dropdown-menu">
-                      <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru</a></li>
+                      <li class="dropdown-item"><a tabindex="-1" href="https://www.chance-international.org/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru</a></li>
                       <li class="dropdown-divider"></li>
-                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
+                      <li class="dropdown-item"><a href="https://www.chance-international.org/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
                       <li class="dropdown-divider"></li>
-                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung-1.html">Deine Bewerbung</a></li>
+                      <li class="dropdown-item"><a href="https://www.chance-international.org/fuerSie/freiwillig/bewerbung-1.html">Deine Bewerbung</a></li>
                       <li class="dropdown-divider"></li>
-                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
+                      <li class="dropdown-item"><a href="https://www.chance-international.org/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
                     </ul>
                   </li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-submenu">
-                    <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim.html">Für Sie daheim</a>
+                    <a  class="dropdown-item" tabindex="-1" href="https://www.chance-international.org/fuerSie/daheim.html">Für Sie daheim</a>
                     <ul class="dropdown-menu">
-                      <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
+                      <li class="dropdown-item"><a tabindex="-1" href="https://www.chance-international.org/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
                       <li class="dropdown-divider"></li>
-                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li>
+                      <li class="dropdown-item"><a href="https://www.chance-international.org/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li>
                       <li class="dropdown-divider"></li>
-                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
+                      <li class="dropdown-item"><a href="https://www.chance-international.org/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
                     </ul>
                   </li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie/presse">Presse und Downloads</a> </li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
                   <li class="dropdown-divider"></li>
-                  <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
+                  <li class="dropdown-item"> <a href="https://www.chance-international.org/fuerSie/zitate.html">Zitate</a> </li>
 
                 </li>
               </ul>
             </div>
             <li class="nav-item">
-              <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" id="blog"> BLOG </a>
+              <a class="nav-link" href="https://www.chance-international.org/blog" id="blog"> BLOG </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" id="kontakt"> KONTAKT </a>
+              <a class="nav-link" href="https://www.chance-international.org/kontakt" id="kontakt"> KONTAKT </a>
             </li>
 
           </ul>
