--- a/craft_sicherungWebsite/templates/_layouts/spendenaufrufmitherz.html
+++ b/craft_sicherungWebsite/templates/_layouts/spendenaufrufmitherz.html
@@ -6,7 +6,7 @@
     <div class="col-sm-5" style="padding-left: 30px;">
       <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
       <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-      <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+      <a href="https://www.chance-international.org/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
