--- a/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
+++ b/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
@@ -24,7 +24,7 @@ h2 {
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie">Für Sie</a></li>
     <li class="breadcrumb-item"> Chance e.V. kommt zu ihnen </li>
   </ol>
 </nav>
