--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
@@ -19,8 +19,8 @@
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie">Für Sie</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
       <li class="breadcrumb-item"> Mit weltwärts nach Peru oder Kenia </li>
     </ol>
   </nav>
