--- a/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
@@ -12,7 +12,7 @@
 
 <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
     <li class="breadcrumb-item"> Erfahrungsberichte </li>
   </ol>
 </nav>
@@ -39,7 +39,7 @@
       {% for entry in entries %}
       <div class="card bg-white" style="border:10px solid #f8f5f2;">
         <div class="wrapper" style="background-color: #f8f5f2; max-height: 95px;">
-        <a href="{{ 'https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/' ~ entry.slug }}">
+        <a href="{{ 'https://www.chance-international.org/projekte/erfahrungsberichte/' ~ entry.slug }}">
         <img class="card-img-top rounded-circle" style="border:8px solid #f8f5f2; max-height: 160px; max-width: 160px; display: block; margin-left: auto; margin-right: auto;  width: 50;"
         src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
         </a>
@@ -49,7 +49,7 @@
             <h3> {{ entry.title }} </h3>
             <div id="copy"> <strong> {{ entry.beruf }} </strong> </div>
             <div id="copy"> {{ entry.anleser }}
-              <a href="{{ 'https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/' ~ entry.slug }}"> Weiterlesen > </a>
+              <a href="{{ 'https://www.chance-international.org/projekte/erfahrungsberichte/' ~ entry.slug }}"> Weiterlesen > </a>
             </div>
           </p>
         </div>
