--- a/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/craft_sicherungWebsite/templates/projekte/programme.html
@@ -14,7 +14,7 @@
 
   <nav aria-label="breadcrumb" id="info" style="padding-top: 3rem; margin-bottom: 0;">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
     <li class="breadcrumb-item"> Programme </li>
   </ol>
 </nav>
@@ -45,7 +45,7 @@
           <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px;">
 
           <div class="card border-light h-100" style="margin: 0 5px;">
-            <a href="{{'https://aufbau-website.de/craft/web/projekte/programme/' ~ entry.slug }}">
+            <a href="{{'https://www.chance-international.org/projekte/programme/' ~ entry.slug }}">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
             </a>
             <div class="card-body">
