--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -12,8 +12,8 @@
 
 <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte/programme.html">Programme</a></li>
     <li class="breadcrumb-item"> Dorfentwicklung </li>
   </ol>
 </nav>
@@ -38,7 +38,7 @@
   </nav>
   </div>
 
-<a class="btn btn-primary wandernderButton" href="https://aufbau-website.de/craft/web/spenden/patewerden.html#dorf">Dorfpate werden</a>
+<a class="btn btn-primary wandernderButton" href="https://www.chance-international.org/spenden/patewerden.html#dorf">Dorfpate werden</a>
 
   <div class="container zwoelferspaltenlayout" style="padding-top: 2rem;">
     <div class="row">
@@ -137,8 +137,8 @@
       <h3 style="color: white;"> {{ entry.title }} </h3>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
       <div style="display: flex; justify-content: flex-start; flex-wrap: wrap;">
-      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Peru" class="btn btn-primary" style="margin-right: 2rem; margin-top: 1rem;"> Dorfpate in Peru werden </a>
-      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Kenia" class="btn btn-primary" style="margin-top: 1rem"> Dorfpate in Kenia werden </a>
+      <a href="https://www.chance-international.org/spenden/spende.html?spendenart=D%C3%B6rfer%20Peru" class="btn btn-primary" style="margin-right: 2rem; margin-top: 1rem;"> Dorfpate in Peru werden </a>
+      <a href="https://www.chance-international.org/spenden/spende.html?spendenart=D%C3%B6rfer%20Kenia" class="btn btn-primary" style="margin-top: 1rem"> Dorfpate in Kenia werden </a>
     </div>
     </div>
   </div>
