--- a/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/craft_sicherungWebsite/templates/projekte/themen.html
@@ -17,7 +17,7 @@
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/projekte">Projekte</a></li>
       <li class="breadcrumb-item"> Themen </li>
     </ol>
   </nav>
@@ -201,7 +201,7 @@
     <div class="col-md-7" style="padding-left: 30px;">
       <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
       <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
-      <a href="https://aufbau-website.de/craft/web/spenden" class="btn btn-primary" role="button">Jetzt Spenden</a>
+      <a href="https://www.chance-international.org/spenden" class="btn btn-primary" role="button">Jetzt Spenden</a>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
