--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -57,7 +57,7 @@ h3 p {
     {% set entry = craft.entries.section('spenden').slug('spende').one() %}
       <h1 style="padding-bottom: 2rem;"> {{ entry.title }} </h1>
       <div id="anleser"> {{ entry.anleser }}  </div>
-      <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
+      <a href="https://www.chance-international.org/spenden/jetztspenden.html" class="btn btn-primary" role="button">Jetzt Spenden</a>
     </div>
   </div>
 
@@ -73,7 +73,7 @@ h3 p {
       <div class="col-sm-8">
         <h3 style="color: white;"> {{ entry.title }} </h3>
         <span id="copy" style="color: white;"> {{ entry.anleser }} </span>
-        <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button">Jetzt Pate werden</a>
+        <a href="https://www.chance-international.org/spenden/patewerden.html" class="btn btn-primary" role="button">Jetzt Pate werden</a>
       </div>
     </div>
   </div>
@@ -100,7 +100,7 @@ h3 p {
     <div class="card-deck">
     <div class="card">
       <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
-        <a href="https://aufbau-website.de/craft/web/spenden/schenkenundspenden.html">
+        <a href="https://www.chance-international.org/spenden/schenkenundspenden.html">
       <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
        src="  {% if entry.bild2.one() is not null %}  {{ entry.bild2.one().getUrl() }}  {% endif %}" alt="Card image">
      </a>
@@ -113,7 +113,7 @@ h3 p {
 
     <div class="card">
       <div class="wrapper" style="background-image: url({{ entry.bild.one().url }});">
-        <a href="https://aufbau-website.de/craft/web/spenden/einkaufenundspenden">
+        <a href="https://www.chance-international.org/spenden/einkaufenundspenden">
       <img class="card-img-top mx-auto d-block" style="max-height: 160px; max-width: 160px; margin-top: 2rem; margin-bottom: 2rem;"
        src="  {% if entry.bild3.one() is not null %}  {{ entry.bild3.one().getUrl() }}  {% endif %}" alt="Card image">
      </a>
@@ -136,14 +136,14 @@ h3 p {
 
 <script> //Nur zum einfügen des weißen hamburgers in die menü-leiste
 $(document).ready(function() {
-  $("#hamburgerMobile").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/hamburgerweis.png");
+  $("#hamburgerMobile").attr("src", "https://www.chance-international.org/bilder/header-bilder/hamburgerweis.png");
   var counterMenu = 0;
 
   $("#nav-icon").click(function() { //Nav-icon anklicken -> Logo ausblenden
     if (counterMenu % 2 != 0) {
-      $("#hamburgerMobile").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/hamburgerweis.png");
+      $("#hamburgerMobile").attr("src", "https://www.chance-international.org/bilder/header-bilder/hamburgerweis.png");
     } else {
-      $("#hamburgerMobile").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/schließen.png");
+      $("#hamburgerMobile").attr("src", "https://www.chance-international.org/bilder/header-bilder/schließen.png");
     }
     counterMenu++;
       });
