--- a/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/craft_sicherungWebsite/templates/spenden/spende.html
@@ -6,7 +6,7 @@
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html">Spenden</a></li>
+      <li class="breadcrumb-item"> <a href="https://www.chance-international.org/spenden/jetztspenden.html">Spenden</a></li>
       <li class="breadcrumb-item"> Regelmäßig Spenden </li>
     </ol>
   </nav>
@@ -47,7 +47,7 @@
 
     <div class="custom-control custom-checkbox">
       <input type="checkbox" class="custom-control-input" id="zahlungsermaechtigung" name="Ermaechtigung" required>
-      <label class="custom-control-label" for="zahlungsermaechtigung"> <p>Hiermit ermächtige(n) ich/wir Chance e.V. Zahlungen von meinem/unserem Konto mittels Lastschrift einzuziehen. Zugleich weise(n) ich/wir mein/unser Kreditinstitut an, die von Chance e.V. auf mein/unser Konto gezogenen Lastschriften einzulösen. <br> Hier können Sie die <a href="#myModal" data-toggle="modal" data-target="#myModal">Termine der Einzüge unserer SEPA-Lastschriften</a> einsehen.</p>
+      <label class="custom-control-label" for="zahlungsermaechtigung"> <p>Hiermit ermächtige(n) ich/wir Chance e.V. Zahlungen von meinem/unserem Konto mittels Lastschrift einzuziehen. Zugleich weise(n) ich/wir mein/unser Kreditinstitut an, die von Chance e.V. auf mein/unser Konto gezogenen Lastschriften einzulösen. Diese online-Lastschrift ist auch ohne Unterschrift gültig. Hier können Sie die <a href="#myModal" data-toggle="modal" data-target="#myModal">Termine der Einzüge unserer SEPA-Lastschriften</a> einsehen.</p>
  </label>
     </div>
     <p id="fehlermeldungErmaechtigung"> </p>
@@ -80,8 +80,17 @@
     <p id="fehlermeldungCheckbox"> </p>
 
     <div class="row">
+
+      <div class="col-sm-12" style="padding-top: 3rem; display: flex; justify-content: flex-start;">
+      <div class="form-group" style="width: 50%; padding-right: 15px;">
+        <label for="usr"> <b>Einzug ab</b> </label>
+        <input type="text" value="Nächstmöglicher Termin" name="einzug" id="einzug" class="form-control" required>
+      </div>
+      <div style="padding-top: 2.5rem; padding-left: 1rem;"> oder Wunschtermin eintragen (MM/JJJJ) </div>
+    </div>
+
       <div class="col-sm-6">
-        <div class="form-group" style="padding-top: 3rem;">
+        <div class="form-group">
           <label for="sel1" id="copy">Verwendungszweck</label>
           <select class="form-control" id="sel1" name="zweck" style="height: auto;">
             <option>Allgemein Spenden</option>
@@ -149,7 +158,7 @@
 
         <div class="custom-control custom-checkbox">
           <input type="checkbox" class="custom-control-input" id="datenschutz" name="datenschutz" required>
-          <label class="custom-control-label" for="datenschutz">Ich bin damit einverstanden, dass Chance e. V. meine Daten sicher speichert <a href="https://aufbau-website.de/craft/web/fuerSie/rechtliches/datenschutz">(Infos zum Datenschutz)</a>
+          <label class="custom-control-label" for="datenschutz">Ich bin damit einverstanden, dass Chance e. V. meine Daten sicher speichert <a href="https://www.chance-international.org/fuerSie/rechtliches/datenschutz">(Infos zum Datenschutz)</a>
             und diese nicht an Dritte weiter gibt. Ohne diese Daten können wir Ihnen keine Zuwendungsbescheinigung zusenden.</label>
         </div>
           <p id="fehlermeldungDatenschutz"> </p>
@@ -178,8 +187,13 @@
         <form method="post" action="" accept-charset="UTF-8">
           {{ csrfInput() }}
           <input type="hidden" name="action" value="contact-form/send">
-
           {{ redirectInput('kontakt/dankespende') }}
+
+          <label style="margin-bottom: 0;">Anmerkung*</label>
+          <input required class="form-control" type="text" name="message[Allgemeine Anmerkung]" value="Hiermit ermächtige(n) ich/wir Chance e.V. Spendenzahlungen von meinem/unserem Konto mittels Lastschrift einzuziehen. Zugleich weise(n) ich/wir mein/unser Kreditinstitut an, die von Chance e.V. auf mein/unser Konto gezogenen Lastschriften einzulösen. Diese online-Lastschrift ist auch ohne Unterschrift gültig">
+
+          <label style="margin-bottom: 0;" for="inhaberCraft">Vorname*</label>
+          <input id="einzugCraft" required class="form-control" type="text" name="message[Einzug ab]" value="">
 
           <label style="margin-bottom: 0;" for="inhaberCraft">Vorname*</label>
           <input id="inhaberCraft" required class="form-control" type="text" name="message[Inhaber]" value="">
@@ -210,7 +224,7 @@
           {{ message is defined and message ? errorList(message.getErrors('fromEmail')) }}
 
           <label style="margin-bottom: 0;" for="message"> Kommentar </label>
-          <textarea rows="5" cols="30" class="form-control" id="message" name="message[Kommentar]"> </textarea>
+          <textarea rows="5" cols="30" class="form-control" id="message" name="message[Kommentar]"> Online-Lastschrift gilt ohne Unterschrift. </textarea>
         </div>
 
         <div class="container zwoelferspaltenlayout" style="padding-bottom: 5rem;">  <!-- Der Container wo der Text automatisch reingerendert wird -->
@@ -220,6 +234,9 @@
             die von Chance e.V. auf mein/unser Konto gezogenen Lastschriften einzulösen. </p>
 
             <div class="row" style="padding-bottom: 4rem;" id="copy">
+
+              <div class="col-6"> Einzug ab </div> <div class="col-6">  <span id="einzugK"></span>  </div>
+
               <div class="col-6"> Kontoinhaber   </div> <div class="col-6">  <span id="inhaberK"></span>  </div>
 
               <div class="col-6"> Straße, Hausnummer   </div> <div class="col-6">  <span id="adresseK"></span>  </div>
@@ -239,12 +256,14 @@
               <div class="col-6"> Intervall   </div> <div class="col-6">  <span id="sel1K"></span>  </div>
 
               <div class="col-6"> E-Mail   </div> <div class="col-6">  <span id="emailK"></span>  </div>
+
+              <div class="col-12" style="padding-top: 1.5rem;"> Online-Lastschrift gilt ohne Unterschrift, ausgedruckt bitte unterschreiben.  </div>
             </div>
 
             <div style="display: flex; justify-content: space-between;">
                 <button type="button" onclick="bearbeiten()" class="btn btn-primary">Bearbeiten</button>
                 <button type="button" onclick="pdfErstellen()" class="btn btn-primary">Auftrag ausdrucken und verschicken</button>
-                <input type="submit" value="Auftrag online absenden" class="btn btn-primary">
+                <input type="submit" name="submit" value="Auftrag online absenden" class="btn btn-primary">
             </div>
           </form>
         </div> <!-- Die Kontrollansicht mit den Feldern -->
