--- a/craft_sicherungWebsite/templates/ueberUns/leitbild.html
+++ b/craft_sicherungWebsite/templates/ueberUns/leitbild.html
@@ -13,7 +13,7 @@
 
   <nav aria-label="breadcrumb" id="info">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/ueberUns">Über Uns</a></li>
+    <li class="breadcrumb-item"> <a href="https://www.chance-international.org/ueberUns">Über Uns</a></li>
     <li class="breadcrumb-item"> Leitbild</li>
   </ol>
 </nav>
